# onion_clustering

./: .coverage  .gitignore  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml  pytest.ini  tmp.py
docs/source/: classes.rst  conf.py  index.rst  modules.rst
docs/source/_autosummary/: onion_clustering.onion_multi.BaseEstimator.rst  onion_clustering.onion_multi.OnionMulti.rst  onion_clustering.onion_multi.rst  onion_clustering.onion_uni.BaseEstimator.rst  onion_clustering.onion_uni.OnionUni.rst  onion_clustering.rst  tropea_clustering.OnionMulti.rst  tropea_clustering.OnionMultiSmooth.rst  tropea_clustering.OnionUniSmooth.rst  tropea_clustering._internal.first_classes.StateMulti.rst  tropea_clustering._internal.first_classes.StateUni.rst  tropea_clustering._internal.onion_smooth.first_classes.StateUni.rst  tropea_clustering.rst  (+17 more)
examples/: ex1_gaussian_states.py  ex2_water-ice_coex.py  ex3_params_effect.py  example_plots.py  example_script_multi.py  example_script_uni.py  medoid_center.txt  medoid_stddev.txt  plot_results.py
src/onion_clustering/: __init__.py  onion_multi.py  onion_uni.py
src/onion_clustering.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tropea_clustering/: __init__.py  helpers.py  plot.py  plot_smooth.py
src/tropea_clustering.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_multi.py  test_multi_smooth.py  test_plot.py  test_plot_smooth.py  test_uni.py  test_uni_smooth.py
test/output_multi/: labels.npy
test/output_multi_smooth/: labels.npy
test/output_uni/: labels.npy
tmp_check_estimator/: check_estimator.py
(+32 files in other folders)
