[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tropea-clustering"
version = "1.0.5"
description = "Code for unsupervised clustering of time-correlated data."
# license = "MIT"
maintainers = [
  { name = "Matteo Becchi", email = "bechmath@gmail.com" },
]
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "plotly",
  "kaleido",
]
requires-python = "<3.11,>=3.9"
readme = "README.md"

[project.urls]
github = "https://github.com/matteobecchi/onion_clustering/"
documentation = "https://onion_clustering.readthedocs.io/en/latest/"

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx-copybutton",
  "build",
  "twine",
  "furo",
  "numba",
]

[tool.setuptools_scm]
#write_to = "src/tropea_clustering/__version__.py"

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    'tropea_clustering.*',
    'sklearn.base',
    'scipy.*',
    'plotly.*',
    'matplotlib.*',
    'sklearn.utils.estimator_checks',
]
ignore_missing_imports = true
